<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>legged_text_command_controller</name>
    <version>1.0.0</version>
    <description>TODO</description>
    <maintainer email="TODO@TODO.com">TODO</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>ament_cmake_auto</build_depend>

    <depend>controller_interface</depend>
    <depend>realtime_tools</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>legged_controllers</depend>
    <depend>legged_gazebo</depend>
    <depend>onnxruntime_ament</depend>
    <depend>pinocchio</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>gazebo_ros2_control</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
